# sayfit-capstone1

./: .env.example  .gitignore  README.md  food_matcher.py  ingest_superwhisper.py  main.py  nutrition_calculator.py  parser.py  pyproject.toml  requirements.txt  requirements_audio.txt  requirements_data.txt  structure.md  transcripts.db  voice_gui_recorder.py  voice_recorder.py
data/: data_acquisition.ipynb  eda.ipynb  food_database.json  structure.md  transcript_11102172e17e42f9b1faa0f877f53557.json  transcript_201727191a7b4908a77f274b75ba4427.json  transcript_5c20ea39e5d84fa7977fd297a8c9ca01.json  transcript_b8b994e70b384eec84bd59cd6ee69a43.json  transcript_e1b1e86fa54a451ab499d331232781a6.json  transcript_e6a426c2cf82439b8064f04095c6112b.json  transcript_f17b6766f5f747a8bd3d751dd578f77d.json
input_samples/: test1.json  test10.json  test11.json  test2.json  test3.json  test4.json  test6.json  test7.json  test8.json  test9.json
outputs/: final_audio_11102172e17e42f9b1faa0f877f53557.json  final_audio_9b0dfeb4a66b44f080d99ab7791b49f4.json  final_test1.json  final_test10.json  final_test11.json  final_test12.json  final_test2.json  final_test3.json  final_test4.json  final_test6.json  final_test7.json  final_test8.json  final_test9.json  final_test_avocado_handful.json  final_transcript_201727191a7b4908a77f274b75ba4427.json  parsed_test1.json  parsed_test10.json  parsed_test2.json  parsed_test3.json  parsed_test4.json  parsed_test5.json  parsed_test7.json  parsed_test8.json  parsed_test9.json  result_test1.json  result_test10.json  result_test2.json  result_test3.json  result_test4.json  result_test6.json  result_test7.json  result_test8.json  result_test9.json  voice_45037dc17a93.json  voice_69267ff7ef4e.json  voice_730d6db06ad1.json  voice_746f61f79d3d.json  voice_84eb3cdcbbb4.json
scripts/: bootstrap.sh
src/rag_template/: app.py
src/sayfit/: __init__.py  cli.py  config.py  extraction.py  ingestion.py  models.py  output.py  pipeline.py  portion.py  retrieval.py  (+2 more)
tests/: test_chunker.py  test_models.py  test_output.py  test_portion.py
(+20 files in other folders)
